# ai400

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  fastapi.skill  skill-sources-init.skill  skill-updater.skill
.gemini/: settings.json
claude-code-router-bedrock/: API_MAPPING.md  CLAUDE_4.5_NOTES.md  (+12 more)
fastapi-strands-agent/: README.md  main.py  pyproject.toml  requirements.txt
fastapi-strands-agent/.sessions/session_integration_test_1/: session.json
fastapi-strands-agent/.sessions/session_integration_test_1/agents/agent_default/: agent.json
fastapi-strands-agent/.sessions/session_integration_test_1/agents/agent_default/messages/: message_0.json  message_1.json  message_2.json  message_3.json  message_4.json  message_5.json
fastapi-strands-agent/.sessions/session_string/: session.json
fastapi-strands-agent/.sessions/session_string/agents/agent_default/: agent.json
fastapi-strands-agent/.sessions/session_string/agents/agent_default/messages/: message_0.json  message_1.json
fastapi-strands-agent/.sessions/session_test-session-1/: session.json
fastapi-strands-agent/.sessions/session_test-session-1/agents/agent_default/: agent.json
fastapi-strands-agent/.sessions/session_test-session-2/: session.json
fastapi-strands-agent/.sessions/session_test-session-2/agents/agent_default/: agent.json
fastapi-strands-agent/.sessions/session_test-session-3/: session.json
fastapi-strands-agent/.sessions/session_test-session-3/agents/agent_default/: agent.json
fastapi-strands-agent/app/: agent_pool.py  main.py  models.py
fastapi-strands-agent/tests/: test_api.py
(+82 files in other folders)
